# paper-edit-studio

./: .env.example  .gitignore  AGENTS.md  README.md  intro.html  pyproject.toml
docs/: agent-prerequisites.md  cli-usage.md  test-plan.md
docs/research/: INDEX.md  (+4 more)
examples/: sample_rms_frames.json  sample_transcript.json  sample_vad.json
prompts/: README.md  compose-align.md  content-map.md  filler-sweep.md  highlight-remix.md  koubo-tighten.md  quality-review.md  quote-candidates.md  topic-slicing.md
scripts/: pe.py  run_tests.py  studio_web.py  transcribe_media_recorded.sh
tests/: test_asr_cache.py  test_cli_compose.py  test_cli_cuts.py  test_cli_flow.py  test_cli_planning.py  test_cli_quality.py  test_compose_align.py  test_compose_script_api.py  test_corrections.py  test_cutpoint_strategies.py  test_cutpoint_token_padding.py  test_cuts_plan.py  test_dashscope_conversion.py  test_edl_cuts.py  test_export_acceleration.py  test_export_reorder.py  test_ffmpeg_export_integration.py  test_filler_detect.py  test_filler_sweep_api.py  test_paper_edit_state.py  test_planning_api.py  test_planning_budget_checklist.py  test_planning_content_map.py  test_planning_pipeline.py  test_planning_quotes.py  test_planning_storage_protocols.py  test_prompt_store.py  test_quality_ai_review.py  test_quality_api.py  test_quality_confidence.py  test_quality_reference.py  test_quality_report.py  test_redline.py  test_review_html.py  test_span_match.py  test_studio_ai_selector.py  test_studio_app.py  test_studio_settings.py  test_video2md_conversion.py  test_video2md_runner.py  (+2 more)
(+123 files in other folders)
