[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cutpoint-lab"
version = "0.1.0"
description = "Audio-aware cutpoint calibration experiments for transcript-based video editing."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
