[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cutpoint-lab"
version = "0.1.0"
description = "Audio-aware cutpoint calibration experiments for transcript-based video editing."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pe = "cutpoint_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
